Css Format corrections A

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #hello {
-  font-family: Trebuchet MS;
+  font-family: "Trebuchet MS", sans-serif;
 }
 
 #hello2 {
-  color:yellowgreen ;
+  color: yellowgreen;
 }
