--- a/style2.css
+++ b/style2.css
@@ -1,10 +1,9 @@
 table, th, td {
-  border:3px solid green ;
-  color: blue
+  border: 3px, solid, green;
+  color: blue;
 }
 
-ul, li{
+ul, li {
   background-color: rebeccapurple;
-  text-align: center
+  text-align: center;
 }
-
