--- a/style2.css
+++ b/style2.css
@@ -1,12 +1,9 @@
-table, 
-th, 
-td {
+table , th , td {
   border: 3px, solid, green;
   color: blue;
 }
 
-ul, 
-li {
+ul , li {
   background-color: rebeccapurple;
   text-align: center;
 }
